--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -15,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="694.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.automacaowebia.controller.DashboardController">
-       <children>
+    <children>
         <AnchorPane prefHeight="694.0" prefWidth="1080.0">
             <children>
                 <AnchorPane prefHeight="694.0" prefWidth="275.0" styleClass="navbar" stylesheets="@dashboard.css">
@@ -25,7 +22,7 @@
                                 <Font size="16.0" />
                             </font>
                             <graphic>
-                                <FontAwesomeIconView fill="WHITE" glyphName="HOME" size="1.2em" text="" />
+                                <FontAwesomeIconView fill="WHITE" glyphName="COGS" size="1.2em" text="" />
                             </graphic>
                         </Button>
                         <Label alignment="CENTER" layoutX="49.0" layoutY="65.0" prefHeight="30.0" prefWidth="180.0" text="Bem Vindo" textFill="WHITE">
@@ -43,15 +40,15 @@
                                 <Font size="16.0" />
                             </font>
                             <graphic>
-                                <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_CART" size="1.2em" />
+                                <FontAwesomeIconView fill="WHITE" glyphName="LOCK" size="1.2em" />
                             </graphic>
                         </Button>
-                        <Button fx:id="billing_btn" layoutX="39.0" layoutY="310.0" mnemonicParsing="false" onAction="#activateDashboard" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="CONFIGURAÇÃO" textFill="WHITE">
+                        <Button fx:id="billing_btn" layoutX="39.0" layoutY="310.0" mnemonicParsing="false" onAction="#activateDashboard" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="TEMPLATES" textFill="WHITE">
                             <font>
                                 <Font size="16.0" />
                             </font>
                             <graphic>
-                                <FontAwesomeIconView fill="WHITE" glyphName="CLIPBOARD" size="1.2em" text="" />
+                                <FontAwesomeIconView fill="WHITE" glyphName="UPLOAD" size="1.2em" />
                             </graphic>
                         </Button>
                         <Button fx:id="purchase_btn" layoutX="39.0" layoutY="440.0" mnemonicParsing="false" onAction="#activateDashboard" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="PURCHASE" textFill="WHITE">
@@ -59,7 +56,7 @@
                                 <Font size="16.0" />
                             </font>
                             <graphic>
-                                <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_BAG" size="1.2em" />
+                                <FontAwesomeIconView fill="WHITE" glyphName="COG" size="1.2em" />
                             </graphic>
                         </Button>
                         <Button fx:id="customer_btn" layoutX="39.0" layoutY="353.0" mnemonicParsing="false" onAction="#activateDashboard" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="IMPRESSÃO" textFill="WHITE">
@@ -67,7 +64,7 @@
                                 <Font size="16.0" />
                             </font>
                             <graphic>
-                                <FontAwesomeIconView fill="WHITE" glyphName="USER" size="1.2em" />
+                                <FontAwesomeIconView fill="WHITE" glyphName="PRINT" size="1.2em" />
                             </graphic>
                         </Button>
                         <Button fx:id="signout_btn" layoutX="14.0" layoutY="641.0" mnemonicParsing="false" onAction="#signOut" prefHeight="38.0" prefWidth="115.0" styleClass="navbutton" stylesheets="@dashboard.css" text="SAIR" textFill="WHITE">
@@ -87,9 +84,9 @@
                                 <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" size="16.0" text="" />
                             </graphic>
                         </Button>
-                        <AnchorPane layoutX="-2.0" prefHeight="47.0" prefWidth="741.0">
+                        <AnchorPane layoutX="-2.0" prefHeight="47.0" prefWidth="648.0">
                             <children>
-                                <Label layoutX="26.0" layoutY="4.0" prefHeight="42.0" prefWidth="530.0" text="FASHION CLUB MANAGEMENT SYSTEM">
+                                <Label layoutX="26.0" layoutY="4.0" prefHeight="42.0" prefWidth="530.0" text="Templates">
                                     <font>
                                         <Font name="Cooper Black" size="24.0" />
                                     </font>
@@ -187,56 +184,21 @@
                         </AnchorPane>
                         <AnchorPane fx:id="billing_pane" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="820.0" stylesheets="@dashboard.css">
                             <children>
-                                <TableView fx:id="billing_table" layoutX="13.0" layoutY="59.0" onMouseClicked="#selectBillingTableData" prefHeight="280.0" prefWidth="794.0" stylesheets="@dashboard.css">
+                                <Label fx:id="inv_num" layoutX="151.0" layoutY="352.0" prefHeight="32.0" prefWidth="102.0" />
+                                <TableView fx:id="billing_table" layoutX="13.0" layoutY="33.0" onMouseClicked="#selectBillingTableData" prefHeight="271.0" prefWidth="794.0" stylesheets="@dashboard.css">
                                     <columns>
-                                        <TableColumn fx:id="col_bill_item_num" prefWidth="254.4000244140625" text="Item Number" />
-                                        <TableColumn fx:id="col_bill_quantity" prefWidth="189.5999755859375" text="Quantity" />
-                                        <TableColumn fx:id="col_bill_price" prefWidth="150.4000244140625" text="Price" />
-                                        <TableColumn fx:id="col_bill_total_amt" minWidth="0.0" prefWidth="197.60001220703123" text="Total Amount" />
+                                        <TableColumn fx:id="col_bill_item_num" prefWidth="384.0" text="Template" />
+                                        <TableColumn fx:id="col_bill_quantity" prefWidth="402.40008544921875" text="Tipo" />
                                     </columns>
                                 </TableView>
-                                <TextField fx:id="billing_table_search" layoutX="12.0" layoutY="13.0" prefHeight="36.0" prefWidth="236.0" promptText="Search" styleClass="search-billing" stylesheets="@dashboard.css" />
-                                <FontAwesomeIconView glyphName="SEARCH" layoutX="21.0" layoutY="37.0" size="18.0" wrappingWidth="14.857142448425293" />
-                                <Separator layoutX="13.0" layoutY="342.0" prefHeight="10.0" prefWidth="794.0" />
-                                <TextField fx:id="bill_name" layoutX="151.0" layoutY="389.0" promptText="Enter Customer Name" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <TextField fx:id="bill_phone" layoutX="151.0" layoutY="437.0" promptText="Enter Phone Number" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <TextField fx:id="bill_price" layoutX="556.0" layoutY="437.0" onKeyReleased="#onInputTextChanged" promptText="Enter Product Price" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <Label layoutX="28.0" layoutY="389.0" prefHeight="32.0" prefWidth="83.0" text="Name:">
+                                <Separator layoutX="11.0" layoutY="331.0" prefHeight="0.0" prefWidth="794.0" />
+                                <TextField fx:id="template_nome" layoutX="151.0" layoutY="402.0" prefHeight="26.0" prefWidth="421.0" promptText="Digite no nome do template" styleClass="textfield" stylesheets="@dashboard.css" />
+                                <Label layoutX="28.0" layoutY="402.0" prefHeight="32.0" prefWidth="115.0" text="Nome">
                                     <font>
                                         <Font name="Dubai Bold" size="15.0" />
                                     </font>
                                 </Label>
-                                <Label layoutX="28.0" layoutY="437.0" prefHeight="32.0" prefWidth="101.0" text="Phone Number:">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Label layoutX="28.0" layoutY="488.0" prefHeight="32.0" prefWidth="102.0" text="Item Number:">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Label layoutX="449.0" layoutY="383.0" prefHeight="32.0" prefWidth="83.0" text="Quantity:">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Label layoutX="449.0" layoutY="437.0" prefHeight="32.0" prefWidth="83.0" text="Price:">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <TextField fx:id="bill_total_amount" layoutX="556.0" layoutY="489.0" promptText="Enter Total Amount" styleClass="textfield" stylesheets="@dashboard.css">
-                                    <opaqueInsets>
-                                        <Insets />
-                                    </opaqueInsets>
-                                </TextField>
-                                <Label layoutX="448.0" layoutY="488.0" prefHeight="32.0" prefWidth="102.0" text="Total Amount:">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Button fx:id="bill_save" alignment="CENTER" layoutX="602.0" layoutY="583.0" mnemonicParsing="false" onMouseClicked="#billSave" prefHeight="38.0" prefWidth="91.0" styleClass="save" stylesheets="@dashboard.css" text="Save">
+                                <Button fx:id="bill_save" alignment="CENTER" layoutX="685.0" layoutY="563.0" mnemonicParsing="false" onMouseClicked="#billSave" prefHeight="38.0" prefWidth="91.0" styleClass="save" stylesheets="@dashboard.css" text=" Salvar">
                                     <graphic>
                                         <FontAwesomeIconView fill="WHITE" glyphName="SAVE" size="18.0" text="" />
                                     </graphic>
@@ -244,7 +206,7 @@
                                         <Font name="Dubai Bold" size="16.0" />
                                     </font>
                                 </Button>
-                                <Button fx:id="bill_clear" layoutX="476.0" layoutY="583.0" mnemonicParsing="false" onAction="#billClearData" onMouseClicked="#billClearData" prefHeight="38.0" prefWidth="115.0" styleClass="clear" stylesheets="@dashboard.css" text="Clear Data">
+                                <Button fx:id="bill_clear" layoutX="549.0" layoutY="563.0" mnemonicParsing="false" onAction="#limparCampoTemplate" onMouseClicked="#limparCampoTemplate" prefHeight="38.0" prefWidth="115.0" styleClass="clear" stylesheets="@dashboard.css" text="Limpar">
                                     <graphic>
                                         <FontAwesomeIconView fill="WHITE" glyphName="REMOVE" size="18.0" text="" />
                                     </graphic>
@@ -252,65 +214,20 @@
                                         <Font name="Dubai Bold" size="16.0" />
                                     </font>
                                 </Button>
-                                <Button fx:id="bill_print" layoutX="743.0" layoutY="14.0" mnemonicParsing="false" onAction="#printBill" prefHeight="32.0" prefWidth="50.0" styleClass="print" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="PRINT" size="24.0" wrappingWidth="22.285715103149414" />
-                                    </graphic>
-                                </Button>
-                                <DatePicker fx:id="bill_date" layoutX="151.0" layoutY="534.0" prefHeight="32.0" prefWidth="175.0" promptText="Todays Date" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <Label layoutX="28.0" layoutY="534.0" prefHeight="32.0" prefWidth="102.0" text="Date:">
+                                <Label layoutX="27.0" layoutY="352.0" prefHeight="32.0" prefWidth="267.0" text="Adicionar template">
                                     <font>
                                         <Font name="Dubai Bold" size="15.0" />
                                     </font>
                                 </Label>
-                                <Button fx:id="bill_add" alignment="CENTER" layoutX="707.0" layoutY="583.0" mnemonicParsing="false" onAction="#addBillingData" prefHeight="38.0" prefWidth="91.0" styleClass="add" stylesheets="@dashboard.css" text="Add">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="PLUS_CIRCLE" size="18.0" text="" />
-                                    </graphic>
-                                    <font>
-                                        <Font name="Dubai Bold" size="16.0" />
-                                    </font>
-                                </Button>
-                                <Label layoutX="27.0" layoutY="352.0" prefHeight="32.0" prefWidth="115.0" text="Invoice Number :">
+                                <Label layoutX="17.0" prefHeight="32.0" prefWidth="267.0" text="Lista de templates">
                                     <font>
                                         <Font name="Dubai Bold" size="15.0" />
                                     </font>
                                 </Label>
-                                <Label fx:id="inv_num" layoutX="151.0" layoutY="352.0" prefHeight="32.0" prefWidth="102.0" />
-                                <Label layoutX="448.0" layoutY="534.0" prefHeight="32.0" prefWidth="102.0" text="Final Amount:">
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
-                                </Label>
-                                <Label layoutX="559.0" layoutY="534.0" prefHeight="32.0" prefWidth="15.0" text="₹ ">
-                                    <font>
-                                        <Font name="Dubai Bold" size="18.0" />
-                                    </font>
-                                </Label>
-                                <Label fx:id="final_amount" layoutX="574.0" layoutY="534.0" prefHeight="32.0" prefWidth="156.0" text="0.00">
-                                    <font>
-                                        <Font name="Dubai Bold" size="18.0" />
-                                    </font>
-                                </Label>
-                                <ComboBox fx:id="bill_quantity" layoutX="554.0" layoutY="388.0" onAction="#onInputTextChanged" prefHeight="32.0" prefWidth="180.0" promptText="Enter Quanity" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <Button fx:id="bill_update" alignment="CENTER" layoutX="682.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#updateSelectedBillingData" prefHeight="38.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
+                                <Button fx:id="btnLoadTemplate" layoutX="591.0" layoutY="402.0" onAction="#loadTemplate" prefHeight="26.0" prefWidth="166.0" styleClass="add" stylesheets="@dashboard.css" text="Carregar Template">
                                     <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="EDIT" size="24.0" />
+                                        <FontAwesomeIconView fill="WHITE" glyphName="TAG" size="18.0" />
                                     </graphic>
-                                </Button>
-                                <Button fx:id="bill_delete" alignment="CENTER" layoutX="622.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#deleteBillingData" prefHeight="38.0" prefWidth="50.0" styleClass="add" stylesheets="@dashboard.css">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="MINUS_CIRCLE" size="24.0" />
-                                    </graphic>
-                                </Button>
-                                <TextField fx:id="bill_item" layoutX="151.0" layoutY="489.0" onKeyPressed="#onInputTextChanged" promptText="Enter Item Number" styleClass="textfield" stylesheets="@dashboard.css" />
-                                <Button fx:id="bill_clear1" layoutX="253.0" layoutY="11.0" mnemonicParsing="false" onAction="#searchForBills" onMouseClicked="#billClearData" prefHeight="36.0" prefWidth="115.0" styleClass="clear" stylesheets="@dashboard.css" text="Get Bills">
-                                    <graphic>
-                                        <FontAwesomeIconView fill="WHITE" glyphName="FILE_PDF_ALT" size="18.0" />
-                                    </graphic>
-                                    <font>
-                                        <Font name="Dubai Bold" size="15.0" />
-                                    </font>
                                 </Button>
                             </children>
                         </AnchorPane>
@@ -429,6 +346,7 @@
                                 </Label>
                             </children>
                         </AnchorPane>
+                        <Separator layoutX="14.0" layoutY="49.0" prefHeight="0.0" prefWidth="794.0" />
                     </children>
                 </AnchorPane>
             </children>
