--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -187,9 +187,10 @@
                                 <Label fx:id="inv_num" layoutX="151.0" layoutY="352.0" prefHeight="32.0" prefWidth="102.0" />
                                 <TableView fx:id="lista_template" layoutX="13.0" layoutY="33.0" prefHeight="271.0" prefWidth="794.0" stylesheets="@dashboard.css">
                                     <columns>
-                                        <TableColumn fx:id="col_template_nome" prefWidth="300.0" text="Template" />
-                                        <TableColumn fx:id="col_template_tipo" prefWidth="250.0" text="Tipo" />
-                                        <TableColumn fx:id="col_template_criado" prefWidth="237.60003662109375" text="Criado em" />
+                                        <TableColumn fx:id="col_template_nome" prefWidth="380.0" text="Template" />
+                                        <TableColumn fx:id="col_template_tipo" prefWidth="150.0" text="Tipo" />
+                                        <TableColumn fx:id="col_template_criado" minWidth="0.0" prefWidth="153.5999755859375" text="Criado em" />
+                                        <TableColumn fx:id="col_template_acao" prefWidth="120.0" text="Ações" />
                                     </columns>
                                 </TableView>
                                 <Separator layoutX="11.0" layoutY="331.0" prefHeight="0.0" prefWidth="794.0" />
